src/test/contracts/negative/interpret_test_failwith2.mligo
let wat : unit = failwith "wat"
let test =
  true
